[gd_scene load_steps=8 format=3 uid="uid://damx3aa3edyni"]

[ext_resource type="Texture2D" uid="uid://0eyl3j72aoae" path="res://assets/map/backgrounds/main_menu_bg.png" id="1_gbxxr"]
[ext_resource type="Script" path="res://scenes/end_game_scenes/end_game.gd" id="1_kc8sl"]
[ext_resource type="FontFile" uid="uid://doma2nwpphsme" path="res://assets/fonts/monogram.ttf" id="2_mknjg"]
[ext_resource type="StyleBox" uid="uid://cfepwr3ouc087" path="res://assets/buttons/button_hover_style.tres" id="3_mk7e8"]
[ext_resource type="StyleBox" uid="uid://bekfbrporjrhn" path="res://assets/buttons/button_normal_style.tres" id="4_023sy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p8kro"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hd0hr"]

[node name="endGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kc8sl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_gbxxr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -114.0
offset_right = 240.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="gameOverLabel" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mknjg")
theme_override_font_sizes/font_size = 128
text = "Game Over!"

[node name="scoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mknjg")
theme_override_font_sizes/font_size = 64
text = "Score:999"
horizontal_alignment = 1

[node name="playAgain" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mknjg")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_p8kro")
theme_override_styles/hover = ExtResource("3_mk7e8")
theme_override_styles/normal = ExtResource("4_023sy")
text = "Play Again?"

[node name="quit" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mknjg")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_hd0hr")
theme_override_styles/hover = ExtResource("3_mk7e8")
theme_override_styles/normal = ExtResource("4_023sy")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/playAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
